k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mime-api
  namespace: mime-api
  labels:
    app: mime-api
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
    - port: 8081
      targetPort: 8081
      protocol: TCP
      name: grpc
  selector:
    app: mime-api
