k8s/ingress-grpc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mime-api-grpc
  namespace: mime-api
  labels:
    app: mime-api
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /displaypart.DisplayPartService
            pathType: Prefix
            backend:
              service:
                name: mime-api
                port:
                  number: 8081
